--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,20 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: url("https://t3.ftcdn.net/jpg/02/74/54/32/360_F_274543215_fanvgATUGui9FaiqbtQtMt4pRs8vC1uh.jpg");
+  /* background-image: url("/images/pexels-alesia-kozik-6765708.jpg"); */
+  
+  background-color: #6a6060;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.glass1 {
+  backdrop-filter: blur(9px) saturate(180%);
+  -webkit-backdrop-filter: blur(9px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
