added background image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-image: url("https://t3.ftcdn.net/jpg/02/74/54/32/360_F_274543215_fanvgATUGui9FaiqbtQtMt4pRs8vC1uh.jpg");
+  background-image: url("https://i.pinimg.com/originals/77/a7/86/77a78633604cce24717dc9735b013725.jpg");
   /* background-image: url("/images/pexels-alesia-kozik-6765708.jpg"); */
   
   background-color: #6a6060;
